--- a/RPNCalc/res/layout/activity_calculator.xml
+++ b/RPNCalc/res/layout/activity_calculator.xml
@@ -168,6 +168,7 @@
                 style="?android:attr/buttonStyleSmall"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:onClick="runFunction"
                 android:text="@string/buttonMinus" />
 
             <Button
@@ -175,6 +176,7 @@
                 style="?android:attr/buttonStyleSmall"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:onClick="runFunction"
                 android:text="@string/buttonMultiply" />
 
             <Button
@@ -182,6 +184,7 @@
                 style="?android:attr/buttonStyleSmall"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:onClick="runFunction"
                 android:text="@string/buttonDivide" />
 
         </LinearLayout>
