Added buttons for stack manipulation.

--- a/RPNCalc/res/layout/activity_calculator.xml
+++ b/RPNCalc/res/layout/activity_calculator.xml
@@ -189,6 +189,41 @@
 
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="vertical" >
+
+            <Button
+                android:id="@+id/buttonDup"
+                style="?android:attr/buttonStyleSmall"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/buttonDup" />
+
+            <Button
+                android:id="@+id/buttonSwap"
+                style="?android:attr/buttonStyleSmall"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/buttonSwap" />
+
+            <Button
+                android:id="@+id/buttonPop"
+                style="?android:attr/buttonStyleSmall"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/buttonPop" />
+
+            <Button
+                android:id="@+id/buttonClear"
+                style="?android:attr/buttonStyleSmall"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/buttonClear" />
+
+        </LinearLayout>
+
     </LinearLayout>
 
 </LinearLayout>
